--- a/package.json
+++ b/package.json
@@ -28,16 +28,18 @@
     "@ionic-native/youtube-video-player": "^4.15.0",
     "@ionic/storage": "2.2.0",
     "angular2-moment": "^1.9.0",
-    "cordova-android": "6.4.0",
+    "com.moust.cordova.videoplayer": "https://github.com/moust/cordova-plugin-videoplayer",
+    "cordova-android": "^6.4.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-youtube-video-player": "^1.0.6",
+    "cryptiles": "^4.1.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
@@ -58,7 +60,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "com.moust.cordova.videoplayer": {},
       "cordova-plugin-insomnia": {}
